lab10/zad05/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: frontend-deployment
  labels:
    app: frontend

spec:
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: my
          image: frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 80
  replicas: 2
  selector:
    matchLabels:
      app: frontend
